removed resolved comments

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -354,22 +354,13 @@ for all the $\psi$ values are displayed in Figure~\ref{fig:pp_s}. As
 $\phi$ diverges from 0, the p-values look less likely to be generated from a 
 standard uniform distributions. Positive $\psi$ values led to p-values with a 
 distribution function higher than the standard uniform distribution function as 
-there were more smaller p-values than expected, and 
+there were more smaller p-values than there should be, and 
 hence, %conservative 
 liberal tests. Negative $\psi$ values led to p-values with a 
 distribution function lower than the standard uniform distribution as there 
-were more larger p-values than expected, and hence, 
+were more larger p-values than there should be, and hence, 
 %liberal 
 conservative tests. 
-\eds{the previous two sentences are not consistent with what is 
-written at the beginning of this section. If I am interpreting the plots 
-correctly, then positive $\psi$ leads to p-values that are too low which would
-correspond to liberal tests (consistent with what was written at the beginning 
-of this section).} \jy{Need to rephrase. A distribution function higher than
-  another distribution means that it has more smaller values.}
-\eds{do the edits fix the problem?}
-\jy{can we rephrase ``than excepted'' to ``than there should be'' or something
-  along the line?}
 
 A complete remedy for KS tests with serially dependent data is
 challenging. The null distribution depends on the structure of the serial
@@ -609,7 +600,6 @@ models characterized by ARMA(1, 1), AR(2), and MA(1) in the simulation settings
 in the last section, we generated serially
 dependent data with marginal distributions $N(8, 8)$ left truncated by zero and
 $\Gamma(8, 1)$. 
-\eds{same AR and MA parameters as the previous section?} \jy{yes; edited.}
 Then, for data from $\Gamma(8, 1)$, we tested $H_0$ that the
 data has marginally a normal distribution; for data from $N(8, 8)$ left
 truncated by zero, we tested $H_0$ that the data has marginally a gamma
